<?xml version="1.1" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    tools:context=".ui.movie.SelectedMovieFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/empty_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_empty_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/poster_image_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_header_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Название" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_header_genre"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/genre_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Жанр" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_header_year"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/year_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Год" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_header_actors"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/actors_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Актёры" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_header_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Описание" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
